--- a/index.html
+++ b/index.html
@@ -4,13 +4,45 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- index.html -->
+    <meta
+      name="description"
+      content="A modern React.js application for creating and managing wedding events with personalized digital invitations. Built with Firebase for authentication and data storage."
+    />
+
+    <!-- ✅ Favicon -->
+    <link rel="icon" type="image/png" href="/logo.jpg" />
+    <meta property="og:title" content="" />
+    <meta
+      property="og:description"
+      content="A modern React.js application for creating and managing wedding events with personalized digital invitations. Built with Firebase for authentication and data storage."
+    />
+    <meta property="og:image" content="/logo.jpg" />
+    <meta property="og:url" content="https://imcleroi01.netlify.app" />
+    <meta property="og:type" content="website" />
+
+    <!-- ✅ Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="A modern React.js application for creating and managing wedding events with personalized digital invitations. Built with Firebase for authentication and data storage."
+    />
+    <meta
+      name="twitter:description"
+      content="A modern React.js application for creating and managing wedding events with personalized digital invitations. Built with Firebase for authentication and data storage."
+    />
+    <meta name="twitter:image" content="/logo.jpg" />
+
+    <!-- ✅ Canonical URL -->
+    <link rel="canonical" href="https://ton-site.com" />
+
+    <!-- ✅ Contact link (optionnel, pas nécessaire si dans la page) -->
+    <link rel="me" href="mailto:contact@tonsite.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
       rel="stylesheet"
     />
 
-    <title>WeddingTix - Digital Wedding Invitations</title>
+    <title>Sambukila - Digital Wedding Invitations</title>
   </head>
   <body>
     <div id="root"></div>
