mise a jour redirection landingpage

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       content="A modern React.js application for creating and managing wedding events with personalized digital invitations. Built with Firebase for authentication and data storage."
     />
     <meta property="og:image" content="/logo.jpg" />
-    <meta property="og:url" content="https://imcleroi01.netlify.app" />
+    <meta property="og:url" content="https://sambukila.netlify.app/" />
     <meta property="og:type" content="website" />
 
     <!-- ✅ Twitter Card -->
@@ -33,7 +33,7 @@
     <meta name="twitter:image" content="/logo.jpg" />
 
     <!-- ✅ Canonical URL -->
-    <link rel="canonical" href="https://ton-site.com" />
+    <link rel="canonical" href="https://sambukila.netlify.app/" />
 
     <!-- ✅ Contact link (optionnel, pas nécessaire si dans la page) -->
     <link rel="me" href="mailto:contact@tonsite.com" />
