mise a jour redirection de meta

--- a/index.html
+++ b/index.html
@@ -1,49 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="A modern React.js application for creating and managing wedding events with personalized digital invitations. Built with Firebase for authentication and data storage."
-    />
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="/logo.jpg" />
 
-    <!-- ✅ Favicon -->
-    <link rel="icon" type="image/png" href="/logo.jpg" />
-    <meta property="og:title" content="" />
-    <meta
-      property="og:description"
-      content="A modern React.js application for creating and managing wedding events with personalized digital invitations. Built with Firebase for authentication and data storage."
-    />
-    <meta property="og:image" content="/logo.jpg" />
-    <meta property="og:url" content="https://sambukila.netlify.app/" />
-    <meta property="og:type" content="website" />
+  <title>Sambukila – Elegant Digital Wedding Invitations</title>
 
-    <!-- ✅ Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="A modern React.js application for creating and managing wedding events with personalized digital invitations. Built with Firebase for authentication and data storage."
-    />
-    <meta
-      name="twitter:description"
-      content="A modern React.js application for creating and managing wedding events with personalized digital invitations. Built with Firebase for authentication and data storage."
-    />
-    <meta name="twitter:image" content="/logo.jpg" />
+  <!-- ✅ Meta Description -->
+  <meta name="description" content="Create stunning digital wedding invitations that reflect your style. Sambukila makes it easy to personalize, send, and manage your guest list—all in one beautiful, modern experience." />
 
-    <!-- ✅ Canonical URL -->
-    <link rel="canonical" href="https://sambukila.netlify.app/" />
+  <!-- ✅ Open Graph for Social Media -->
+  <meta property="og:title" content="Sambukila – Elegant Digital Wedding Invitations" />
+  <meta property="og:description" content="Make your big day unforgettable with Sambukila. Personalized digital invites, elegant design, easy sharing, and seamless guest tracking—all from your phone." />
+  <meta property="og:image" content="/logo.jpg" />
+  <meta property="og:url" content="https://sambukila.netlify.app/" />
+  <meta property="og:type" content="website" />
 
-    <!-- ✅ Contact link (optionnel, pas nécessaire si dans la page) -->
-    <link rel="me" href="mailto:contact@tonsite.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
-      rel="stylesheet"
-    />
+  <!-- ✅ Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Sambukila – Elegant Digital Wedding Invitations" />
+  <meta name="twitter:description" content="Invite your loved ones with style. Sambukila offers modern, shareable, and beautifully crafted digital wedding invitations." />
+  <meta name="twitter:image" content="/logo.jpg" />
 
-    <title>Sambukila - Digital Wedding Invitations</title>
-  </head>
+  <!-- ✅ Canonical URL -->
+  <link rel="canonical" href="https://sambukila.netlify.app/" />
+
+  <!-- ✅ Optional contact info -->
+  <link rel="me" href="mailto:contact@sambukila.com" />
+
+  <!-- ✅ Google Fonts example (adjust as needed) -->
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
+</head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
